--- a/ProjetoEMPSOFT/app/src/main/res/layout/fragment_food_ordering.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/fragment_food_ordering.xml
@@ -1,13 +1,54 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.projetoempsoft.FoodOrderingFragment">
+    tools:context="com.example.projetoempsoft.FoodOrderingFragment"
+    android:weightSum="1">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="FOOD ORDERING FRAGMENT" />
+        android:layout_width="wrap_content"
+        android:layout_height="62dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Whiskas 3Kg"
+        android:id="@+id/textView2"
+        android:textSize="30dp"
+        android:layout_alignTop="@+id/button1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="10dp" />
 
-</FrameLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="62dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Whiskas"
+        android:id="@+id/textView1"
+        android:textSize="30dp"
+        android:layout_gravity="center_vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="10dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Comprar"
+        android:id="@+id/button"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="10dp"
+        android:background="#0559ff" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Comprar"
+        android:id="@+id/button1"
+        android:layout_below="@+id/button"
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        android:background="#0559ff" />
+
+</RelativeLayout>
