Adding the interface of vaccine creation

--- a/ProjetoEMPSOFT/app/src/main/res/layout/fragment_vaccines.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/fragment_vaccines.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     tools:context="com.example.projetoempsoft.VaccinesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <Button
+        android:id="@+id/add_vaccine_button"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="VACCINES FRAGMENT" />
+        android:layout_height="wrap_content"
+        android:text="ADICIONAR VACINA"/>
 
 </FrameLayout>
