adding listview of consultas

--- a/ProjetoEMPSOFT/app/src/main/res/layout/fragment_schedules.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/fragment_schedules.xml
@@ -5,12 +5,19 @@
     tools:context="com.example.projetoempsoft.SchedulesFragment">
 
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="418dp"
+        android:id="@+id/scheduleListView"
+        android:layout_gravity="center_horizontal|top" />
+
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Novo Agendamento"
         android:id="@+id/newScheduleBtn"
-        android:layout_gravity="center" />
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="20dp" />
 
 </FrameLayout>
