--- a/ProjetoEMPSOFT/app/src/main/res/layout/activity_new_vaccine.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/activity_new_vaccine.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.example.projetoempsoft.NewVaccineActivity">
+    tools:context="com.example.projetoempsoft.activities.NewVaccineActivity">
 
     <EditText
         android:id="@+id/vaccineType"
