--- a/ProjetoEMPSOFT/app/src/main/res/layout/fragment_vaccines.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/fragment_vaccines.xml
@@ -1,13 +1,32 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.projetoempsoft.VaccinesFragment">
+
+    android:orientation="vertical"
+
+    >
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/vaccinesList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
 
     <Button
-        android:id="@+id/add_vaccine_button"
+        android:id="@+id/add_new_vaccine_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ADICIONAR VACINA"/>
+        android:text="ADICIONAR NOVA VACINA"/>
 
-</FrameLayout>
+</LinearLayout>
