--- a/ProjetoEMPSOFT/app/src/main/res/layout/content_schedule.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/content_schedule.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.projetoempsoft.ScheduleActivity"
+    tools:context="com.example.projetoempsoft.activities.ScheduleActivity"
     tools:showIn="@layout/activity_schedule">
 
 </RelativeLayout>
