--- a/ProjetoEMPSOFT/app/src/main/res/layout/fragment_new_schedule.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/fragment_new_schedule.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.projetoempsoft.NewScheduleFragment"
+    tools:context="com.example.projetoempsoft.activities.NewScheduleFragment"
     android:orientation="vertical"
     android:weightSum="1">
 
