--- a/ProjetoEMPSOFT/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_add"
-            android:title="Adicionar Novo Pet" />
+            android:title="Serviços" />
         <item
             android:id="@+id/nav_vaccines"
             android:title="Vacinas" />
@@ -22,25 +22,3 @@
             android:title="Sair" />
     </group>
 </menu>
-
-<!--
-android:icon="@drawable/ic_menu_camera"
-android:icon="@drawable/ic_menu_gallery"
-android:icon="@drawable/ic_menu_slideshow"
-android:icon="@drawable/ic_menu_manage"
--->
-
-<!--
-<item android:title="Communicate">
-    <menu>
-        <item
-            android:id="@+id/nav_share"
-            android:icon="@drawable/ic_menu_share"
-            android:title="Share" />
-        <item
-            android:id="@+id/nav_send"
-            android:icon="@drawable/ic_menu_send"
-            android:title="Send" />
-    </menu>
-</item>
--->
