--- a/ProjetoEMPSOFT/app/src/main/res/layout/fragment_new_schedule.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/fragment_new_schedule.xml
@@ -67,7 +67,9 @@
         android:text="Marcar"
         android:id="@+id/submitSchedule"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="200dp" />
+        android:layout_marginTop="200dp"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/colorPrimary"/>
 
 
 </LinearLayout>
