--- a/ProjetoEMPSOFT/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,21 +4,21 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_add"
-            android:title="Serviços" />
+            android:title="SERVIÇOS" />
         <item
             android:id="@+id/nav_vaccines"
-            android:title="Vacinas" />
+            android:title="VACINAS" />
         <item
             android:id="@+id/nav_scheduling"
-            android:title="Agendamentos" />
+            android:title="AGENDAMENTOS" />
         <item
             android:id="@+id/nav_food"
-            android:title="Pedir Ração" />
+            android:title="PEDIR RAÇÃO" />
         <item
             android:id="@+id/nav_settings"
-            android:title="Configurações" />
+            android:title="CONFIGURAÇÕES" />
         <item
             android:id="@+id/nav_exit"
-            android:title="Sair" />
+            android:title="SAIR" />
     </group>
 </menu>
