--- a/ProjetoEMPSOFT/app/src/main/res/values/colors.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ff5043</color>
+    <color name="colorPrimaryDark">#c22e23</color>
+    <color name="colorAccent">@color/primaryColor</color>
+    <color name="primaryColor">#ff5043</color>
+    <color name="white">#ffffff</color>
 </resources>
