fix agendamentos and layouts

--- a/ProjetoEMPSOFT/app/src/main/res/layout/fragment_schedules.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/fragment_schedules.xml
@@ -5,11 +5,18 @@
     tools:context="com.example.projetoempsoft.activities.SchedulesFragment">
 
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="418dp"
-        android:id="@+id/scheduleListView"
-        android:layout_gravity="center_horizontal|top" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/scheduleListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
