--- a/ProjetoEMPSOFT/app/src/main/res/layout/schedule_list_item.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/schedule_list_item.xml
@@ -1,12 +1,77 @@
-<?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scheduleListItem"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:textSize="16dip"
-    android:textStyle="bold">
-</TextView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:weightSum="1">
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/schedule_card"
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:layout_margin="2dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/cardScheduleType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="18dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="12dp"
+                android:text="Tipo de Vacina"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/cardScheduleDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Data de Agend"
+                android:layout_below="@+id/cardScheduleStatus"
+                android:layout_alignLeft="@+id/cardScheduleType"
+                android:layout_alignStart="@+id/cardScheduleType" />
+
+            <TextView
+                android:id="@+id/cardScheduleHour"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hora"
+                android:layout_alignBaseline="@+id/cardScheduleDate"
+                android:layout_alignBottom="@+id/cardScheduleDate"
+                android:layout_toRightOf="@+id/cardScheduleType"
+                android:layout_toEndOf="@+id/cardScheduleType"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp" />
+
+            <TextView
+                android:id="@+id/cardScheduleStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="26dp"
+                android:layout_marginRight="26dp"
+                android:background="@color/colorPrimary"
+                android:backgroundTintMode="add"
+                android:elegantTextHeight="false"
+                android:paddingBottom="2dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="2dp"
+                android:text="Status"
+                android:textAllCaps="false"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
+</LinearLayout>
