--- a/ProjetoEMPSOFT/app/src/main/res/layout/fragment_schedules.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/fragment_schedules.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.projetoempsoft.activities.SchedulesFragment">
 
 
@@ -23,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
         android:src="@drawable/plus_button"
-        android:backgroundTint="@color/primaryColor"
+        app:backgroundTint="@color/primaryColor"
         android:id="@+id/newScheduleBtn"/>
 
 </FrameLayout>
