--- a/ProjetoEMPSOFT/app/src/main/res/layout/fragment_vaccines.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/fragment_vaccines.xml
@@ -1,8 +1,8 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
         android:src="@drawable/plus_button"
-        android:backgroundTint="@color/primaryColor"
+        app:backgroundTint="@color/primaryColor"
         android:id="@+id/add_new_vaccine_button"/>
 
 </LinearLayout>
