--- a/ProjetoEMPSOFT/app/src/main/res/layout/shopping_list_item.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/shopping_list_item.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/cardScheduleType"
+                android:id="@+id/card_itemTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -30,7 +30,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/card_itemPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
