--- a/ProjetoEMPSOFT/app/src/main/res/layout/shopping_list_item.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/shopping_list_item.xml
@@ -35,10 +35,11 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignTop="@+id/cardScheduleType"
-                android:layout_marginEnd="41dp"
-                android:layout_marginRight="41dp"
-                android:text="preço" />
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="40dp"
+                android:layout_marginRight="40dp"
+                android:text="preço"
+                android:textSize="15sp" />
 
         </RelativeLayout>
 
