--- a/ProjetoEMPSOFT/app/src/main/res/layout/shopping_list_item.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/shopping_list_item.xml
@@ -1,16 +1,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:weightSum="1">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/schedule_card"
+        android:id="@+id/shoppingListCard"
         android:layout_width="fill_parent"
         android:layout_height="60dp"
         android:layout_gravity="center"
-        android:layout_margin="2dp">
+        android:layout_margin="2dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <RelativeLayout
             android:layout_width="match_parent"
