--- a/ProjetoEMPSOFT/app/src/main/res/layout/fragment_vaccines.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/layout/fragment_vaccines.xml
@@ -1,8 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,11 +18,15 @@
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_new_vaccine_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
+        android:layout_gravity="bottom|right|end"
         android:src="@drawable/plus_button"
-        app:backgroundTint="@color/primaryColor"
-        android:id="@+id/add_new_vaccine_button"/>
 
-</LinearLayout>
+        app:layout_anchor="@id/vaccinesList"
+        app:layout_anchorGravity="bottom|right|end"
+
+        app:backgroundTint="@color/primaryColor" />
+
+</FrameLayout>
